--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ file.reference.jfreesvg-1.2.jar=lib/jfreechart/jfreesvg-1.2.jar
 file.reference.junit-4.11.jar=lib/jfreechart/junit-4.11.jar
 file.reference.orsonpdf-1.2-eval.jar=lib/jfreechart/orsonpdf-1.2-eval.jar
 file.reference.servlet.jar=lib/jfreechart/servlet.jar
+file.reference.sqlite-jdbc-3.7.2.jar=C:\\Users\\Entrar.pcaula\\Documents\\NetBeansProjects\\Kata6\\lib\\sqlite-jdbc-3.7.2.jar
 file.reference.swtgraphics2d.jar=lib/jfreechart/swtgraphics2d.jar
 includes=**
 jar.compress=false
@@ -49,7 +50,8 @@ javac.classpath=\
     ${file.reference.junit-4.11.jar}:\
     ${file.reference.orsonpdf-1.2-eval.jar}:\
     ${file.reference.servlet.jar}:\
-    ${file.reference.swtgraphics2d.jar}
+    ${file.reference.swtgraphics2d.jar}:\
+    ${file.reference.sqlite-jdbc-3.7.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
